<resources>
    <string name="app_name">MyStudentApp</string>
    <string name="email">Email:</string>
    <string name="email_hint">username@something.com</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="signin">Sign in</string>
    <string name="classes">Classes</string>
    <string name="schedule">Schedule</string>
    <string name="progress">Progress</string>
    <string name="analytics">Analytics</string>
    <string name="study_cards">Study cards</string>
    <string name="today">Today</string>
    <string name="quiz">Quiz</string>
    <string name="role_dialog_text">How would you like to use the app?</string>
    <string name="as_student">As Student</string>
    <string name="as_teacher">As Teacher</string>
    <string name="ok">OK</string>
    <string name="sign_out">Sign out</string>
    <string name="name_optional">Username (optional):</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="welcome">Welcome!</string>
    <string name="add_course">Add course</string>
    <string name="select_course_from_list">Select course from list</string>
    <string name="add_course_name">Add course name</string>
    <string name="add_course_code">Add course code</string>
    <string name="cancel">Cancel</string>
    <string name="course_code">Course code:</string>
    <string name="teachers">Teachers:</string>
    <string name="todos">Todos:</string>
    <string name="statistics">Statistics</string>
    <string name="press_button_to_select_time">Press button to select time</string>
    <string name="select_start_time">Select start time:</string>
    <string name="select_end_time">Select end time:</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="send_confirmation_code">Send confirmation code!</string>
    <string name="the_code_you_received_via_email">The code you received via email</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="todo_text">Todo text</string>
    <string name="add_rate">Add rate</string>
    <string name="add">Add</string>
    <string name="comments">Comments</string>
    <string name="your_comment">Your comment</string>
    <string name="anonymous">Anonymous</string>
    <string name="rates">Rates</string>
    <string name="quizzes">Quizzes</string>
    <string name="full_name">Full name</string>
    <string name="confirmation_code_you_received">Confirmation code</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
</resources>