<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <ToggleButton
        android:id="@+id/tbtnCommenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/anonymous"
        android:textAllCaps="false"/>

    <Spinner
        android:id="@+id/spinnerCommentCourses"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginVertical="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/textColorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCommentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_comment"
            android:inputType="text"
            android:backgroundTint="#ffffff"
            android:textCursorDrawable="@drawable/color_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCommentCancel"
                style="@style/Widget.StudentApp.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCommentOk"
                style="@style/Widget.StudentApp.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>